logs/Slang/chapter-8/8.5--properties.sv.log
name: properties
description: class properties test
should_fail: 0
tags: 8.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties.sv:12:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.5--properties.sv:15:14: error: language feature not yet supported
		test_obj = new;
		           ^~~
